More unit tests.